# mousse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
common/: Cargo.toml  README.md
common/src/: bid.rs  eth2_config.rs  eth2_types.rs  eth2_utils.rs  lib.rs
dashboard/: .env  LICENSE.md  README.md  package-lock.json  package.json
dashboard/public/: index.html  manifest.json
dashboard/src/: App.js  routes.js
dashboard/src/components/: Logo.js  SuccessDialog.js
dashboard/src/contexts/: CurrentSlotContext.js
dashboard/src/layouts/DashboardLayout/: TopBar.js  index.js
dashboard/src/layouts/DashboardLayout/NavBar/: index.js
dashboard/src/theme/: index.js
dashboard/src/utils/: bytesToHex.js  hexToBytes.js  omitString.js
dashboard/src/views/blocks/BlockListView/: Results.js  Toolbar.js  index.js
dashboard/src/views/finalized_blocks/FinalizedBlockListView/: Results.js  Toolbar.js  index.js
dashboard/src/views/logs/LogListView/: Results.js  index.js
dashboard/src/views/processing/ProcessingView/: Bid.js  SlotProcessor.js  SuccessDialog.js  index.js
dashboard/src/views/settings/SettingsView/: Server.js  index.js
dashboard/src/views/states/StateListView/: GrandparentEpochConfirmedCommitmentsTable.js  PendingShardHeadersTable.js  Results.js  Toolbar.js  index.js
http_api/: Cargo.toml
http_api/reference/: eth2_emulator.v1.yaml  eth2_emulator.yaml
http_api/src/: cli.yaml  errors.rs  main.rs
http_api/src/endpoints/: beacon.rs  config.rs  mod.rs  shards.rs  simulator.rs  utils.rs
simulator/: Cargo.toml  README.md
simulator/benches/: my_bench.rs
simulator/src/: beacon_chain.rs  errors.rs  lib.rs  shard.rs  simulation_params.rs  simulator.rs
simulator/tests/: test_simulation.rs
