[package]
name = "http_api"
version = "0.1.0"
authors = ["minami <minaminaoy@gmail.com>, Ryuya Nakamura (nrryuya@gmail.com)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
eth2_simulator = { path = "../simulator" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1"
serde_derive = "1"
pretty_env_logger = "0.4"
base64 = "0.13"
chrono = "0.4"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
rand = "0.8.0"
serde_qs = "0.8"
thiserror = "1.0.24"
