[package]
name = "eth2_simulator"
version = "0.1.0"
authors = ["minami <minaminaoy@gmail.com>", "Ryuya Nakamura (nrryuya@gmail.com)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }
rand = "0.8.0"
criterion = "0.3.4"

[[bench]]
name = "my_bench"
harness = false
